# Sudoku

./: CMakeLists.txt  Readme.me  main.c
include/: SudokuGraphic.h  sudokuFunction.h
lib/: SudokuGraphic.c  sudokuFunction.c
